--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -75,6 +75,8 @@
     <ClCompile Include="Frontend.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +93,8 @@
   <ItemGroup>
     <ClInclude Include="MinWin.hpp" />
     <ClInclude Include="Phase.hpp" />
+    <ClInclude Include="stb_image.hpp" />
+    <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Window.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
