--- a/Adventure/Adventure.vcxproj.filters
+++ b/Adventure/Adventure.vcxproj.filters
@@ -25,6 +25,8 @@
     <ClInclude Include="Buffer.hpp" />
     <ClInclude Include="Render.hpp" />
     <ClInclude Include="GLError.hpp" />
+    <ClInclude Include="Player.hpp" />
+    <ClInclude Include="Input.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Default-Vert.glsl" />
