--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -72,10 +72,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DefaultShader.cpp" />
+    <ClCompile Include="GLContext.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Frontend.cpp" />
     <ClCompile Include="Gusher.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -102,12 +103,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.hpp" />
-    <ClInclude Include="DefaultShader.hpp" />
+    <ClInclude Include="Clock.hpp" />
+    <ClInclude Include="Frontend.hpp" />
+    <ClInclude Include="GLContext.hpp" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="Frame.hpp" />
     <ClInclude Include="GLError.hpp" />
     <ClInclude Include="Gusher.hpp" />
     <ClInclude Include="Input.hpp" />
+    <ClInclude Include="InputSystem.hpp" />
     <ClInclude Include="Item.hpp" />
     <ClInclude Include="MinWin.hpp" />
     <ClInclude Include="Geom.hpp" />
@@ -121,8 +125,6 @@
     <ClInclude Include="Window.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Default-Frag.glsl" />
-    <None Include="Default-Vert.glsl" />
     <None Include="Model-Frag.glsl" />
     <None Include="Model-Vert.glsl" />
   </ItemGroup>
