--- a/Adventure/Adventure.vcxproj.filters
+++ b/Adventure/Adventure.vcxproj.filters
@@ -1,20 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Window.cpp" />
-    <ClCompile Include="Frontend.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="stb_image.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="Render.cpp" />
-    <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="Geom.cpp" />
-    <ClCompile Include="DefaultShader.cpp">
-      <Filter>Shaders</Filter>
-    </ClCompile>
     <ClCompile Include="ModelShader.cpp">
-      <Filter>Shaders</Filter>
+      <Filter>Frontend\Graphics\Shaders</Filter>
     </ClCompile>
     <ClCompile Include="Gusher.cpp">
       <Filter>Game</Filter>
@@ -31,26 +19,43 @@
     <ClCompile Include="Player.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Geom.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Render.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Frontend.cpp">
+      <Filter>Frontend</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Frontend</Filter>
+    </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Frontend</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="InputSystem.cpp">
+      <Filter>Frontend\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="GLContext.cpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Window.hpp" />
-    <ClInclude Include="MinWin.hpp" />
-    <ClInclude Include="Phase.hpp" />
-    <ClInclude Include="stb_image.hpp" />
-    <ClInclude Include="Texture.hpp" />
-    <ClInclude Include="Shader.hpp" />
-    <ClInclude Include="Frame.hpp" />
-    <ClInclude Include="Buffer.hpp" />
-    <ClInclude Include="Render.hpp" />
-    <ClInclude Include="GLError.hpp" />
-    <ClInclude Include="Input.hpp" />
-    <ClInclude Include="Entity.hpp" />
-    <ClInclude Include="Geom.hpp" />
-    <ClInclude Include="DefaultShader.hpp">
-      <Filter>Shaders</Filter>
-    </ClInclude>
     <ClInclude Include="ModelShader.hpp">
-      <Filter>Shaders</Filter>
+      <Filter>Frontend\Graphics\Shaders</Filter>
     </ClInclude>
     <ClInclude Include="Gusher.hpp">
       <Filter>Game</Filter>
@@ -61,27 +66,81 @@
     <ClInclude Include="Player.hpp">
       <Filter>Game</Filter>
     </ClInclude>
+    <ClInclude Include="Buffer.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Frame.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Geom.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="GLError.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Render.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="MinWin.hpp">
+      <Filter>Frontend</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.hpp">
+      <Filter>Frontend</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.hpp">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Phase.hpp">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Frontend.hpp">
+      <Filter>Frontend</Filter>
+    </ClInclude>
+    <ClInclude Include="Clock.hpp">
+      <Filter>Frontend</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.hpp">
+      <Filter>Frontend\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="InputSystem.hpp">
+      <Filter>Frontend\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="GLContext.hpp">
+      <Filter>Frontend\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Default-Frag.glsl">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Default-Vert.glsl">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Model-Vert.glsl">
-      <Filter>Shaders</Filter>
+      <Filter>Frontend\Graphics\Shaders</Filter>
     </None>
     <None Include="Model-Frag.glsl">
-      <Filter>Shaders</Filter>
+      <Filter>Frontend\Graphics\Shaders</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Shaders">
-      <UniqueIdentifier>{e81e6e03-96e9-4866-81a7-081dc7835bfb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Game">
       <UniqueIdentifier>{874f781d-3b2c-4c6f-b94a-6120e0fa489e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Frontend">
+      <UniqueIdentifier>{144342b2-624e-4402-88ad-0d220107edc3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Frontend\Input">
+      <UniqueIdentifier>{a95cddd0-b895-4a0c-b8d6-b58d15156e38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Frontend\Graphics">
+      <UniqueIdentifier>{80e449f1-9efb-48e1-ad0a-6755f1ffeaf2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Frontend\Graphics\Shaders">
+      <UniqueIdentifier>{e81e6e03-96e9-4866-81a7-081dc7835bfb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
