--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Star.cpp" />
     <ClCompile Include="Starfield.cpp" />
     <ClCompile Include="StarfieldShader.cpp" />
     <ClCompile Include="stb_image.cpp" />
@@ -168,6 +169,7 @@
   <ItemGroup>
     <ClInclude Include="Buffer.hpp" />
     <ClInclude Include="Clock.hpp" />
+    <ClInclude Include="Constants.hpp" />
     <ClInclude Include="Frontend.hpp" />
     <ClInclude Include="GLContext.hpp" />
     <ClInclude Include="Entity.hpp" />
@@ -187,6 +189,7 @@
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Render.hpp" />
     <ClInclude Include="Shader.hpp" />
+    <ClInclude Include="Star.hpp" />
     <ClInclude Include="Starfield.hpp" />
     <ClInclude Include="StarfieldShader.hpp" />
     <ClInclude Include="stb_image.hpp" />
