--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FLUTF.cpp" />
     <ClCompile Include="GLContext.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Frontend.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Buffer.hpp" />
     <ClInclude Include="Clock.hpp" />
     <ClInclude Include="Constants.hpp" />
+    <ClInclude Include="FLUTF.hpp" />
     <ClInclude Include="Frontend.hpp" />
     <ClInclude Include="GLContext.hpp" />
     <ClInclude Include="Entity.hpp" />
