Lexicographical ordering for Rk::cstring_ref. Will make upstream patch later.

--- a/Adventure/Adventure.vcxproj.filters
+++ b/Adventure/Adventure.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="Init.hpp">
       <Filter>Frontend</Filter>
     </ClInclude>
+    <ClInclude Include="CStringRefLess.hpp">
+      <Filter>Game</Filter>
+    </ClInclude>
     <ClInclude Include="Constants.hpp">
       <Filter>Game</Filter>
     </ClInclude>
