--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="Buffer.hpp" />
     <ClInclude Include="Clock.hpp" />
     <ClInclude Include="Constants.hpp" />
+    <ClInclude Include="CStringRefLess.hpp" />
     <ClInclude Include="FLUTF.hpp" />
     <ClInclude Include="Frontend.hpp" />
     <ClInclude Include="GLContext.hpp" />
