--- a/Adventure/Adventure.vcxproj
+++ b/Adventure/Adventure.vcxproj
@@ -141,7 +141,6 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Geom.cpp" />
-    <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelShader.cpp" />
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -183,6 +182,7 @@
     <ClInclude Include="Init.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="InputSystem.hpp" />
+    <ClInclude Include="Mesh.hpp" />
     <ClInclude Include="MinWin.hpp" />
     <ClInclude Include="Geom.hpp" />
     <ClInclude Include="Model.hpp" />
